# learning_opencv

./: .gitignore  CMakeLists.txt  PathToCV.md  README.md  alpha_blending.cpp  canny.cpp  display_video.cpp  downsample_video.cpp  downsampling_interactive.cpp  hello_world.cpp  image_transform.cpp  integral_images.cpp  keys.hpp  log_polar.cpp  mat_examples.cpp  mat_sum.cpp  multi_mat_sum.cpp  pixels.cpp  sparse_mat.cpp  types.cpp  typewriter.cpp  video_capture.cpp  video_interactive.cpp  video_smoothing.cpp
ch02/: Cargo.toml
ch02/src/: main.rs
ch05/: CMakeLists.txt  circle.cpp  compare.cpp  inverted_headers.cpp  pyramid.cpp  rectangle.cpp  rectangle_ptr.cpp
ch06/: CMakeLists.txt  frame_counter.cpp  shapes.cpp  text.cpp
ch07/: CMakeLists.txt  pca.cpp  rng.cpp  svd.cpp
ch08/: CMakeLists.txt  canny.cpp  color_histogram.cpp  show_pixel.cpp
ch16/: CMakeLists.txt  optical_flow.cpp
ch17/: CMakeLists.txt  camshiftdemo.cpp  kalman.cpp  kcf.cpp
cv_experiments/usb_cam/: CMakeLists.txt  usb_cam.cpp
